public/styles/tweet.css
.tweet-container {
  margin-top: 20px;
  padding: 15px 15px;
  border: 4px solid black;
  display: flex;
  flex-direction: column;
}

.tweet-container:hover {
  box-shadow: 10px 10px 2px #02020244;
  text-shadow: 1px 1px 1px #02020233;
}

.tweet-container:hover .user-ID {
  opacity: 30%;
}

.tweet-container header {
  display: flex;
  justify-content: space-between;
}

.tweet-container header div {
  display: flex;
}

.tweet-container header img {
  height: 75px;
  width: 75px;
  margin-right: 20px;
}

.tweet-container .user-ID {
  opacity: 0;
}

.tweet-content {
  padding: 0 15px;
  border-bottom: 3px solid black;
} 

.tweet-container footer {
  padding: 0 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.tweet-container .icons span {
  margin-left: 10px;
}

